--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
 			"app/commands",
 			"app/controllers",
 			"app/models",
+			"app/models/Library.php",
 			"app/database/migrations",
 			"app/database/seeds",
 			"app/tests/TestCase.php"
